--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,17 +8,17 @@
 <body>
     <form action="/rescue" method="POST">
         <label for="name">name</label>
-        <input name="name" id="name">
+        <input name="name" type="text" id="name">
         <label for="sex">sex</label>
-        <input name="sex" id="sex">
+        <input name="sex" type="text" id="sex">
         <label for="size">size</label>
-        <input name="size idsize">
+        <input name="size" type="text" id="size">
         <label for="color">color</label>
-        <input name="color" id="color">
+        <input name="color" type="text" id="color">
         <label for="breed">breed</label>
-        <input name="breed" id="breed">
+        <input name="breed" type="text" id="breed">
         <label for="lifeStage">life stage</label>
-        <input name="lifeStage" id="lifeStage">
+        <input name="lifeStage" type="text" id="lifeStage">
         <label for="img">img</label>
         <input name="img" id="img">
         <input type="submit">
