--- a/views/new.ejs
+++ b/views/new.ejs
@@ -23,5 +23,6 @@
         <input name="img" id="img">
         <input type="submit">
     </form>
+    <%- include ("./partials/footer.ejs") %>
 </body>
 </html>
