--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,5 +17,6 @@
        <%= animal.breed %>
        <%= animal.lifeStage %>
     </p>
+    <%- include ("./partials/footer.ejs") %>
 </body>
 </html>
