--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/app.css">    
-
-        <title>Index Rescue Page</title>
-    </head>
+    <%- include ("./partials/head.ejs") %>
 <body> 
     <%- include ("./partials/header.ejs") %>
 <ul>
