--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
         <a href="/rescue/<%=animals[i].id%>" >
             <img src="<%= animals[i].img%>" >
         </a> 
-        <a href="/rescue/<%= animals[i].id %>/edit" type="button" class="edit">Edit</a>
+        <a href="/rescue/<%= animals[i].id %>/edit" type="button" class="button is-dark button is-small button is-rounded">Edit</a>
         <form method="POST" action="/rescue/<%= animals[i].id%>?_method=DELETE">
-            <input class="delete-button" type="submit" value="DELETE">
+            <input type="submit" value="DELETE" class="button is-danger button is-small button is-rounded">
         </form>
     </li>
     <% } %> 
