--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
-    <span>2024</span>
-    <span>Rescue Dog Society</span>
+<footer class="content has-text-centered">
+    <span class="foot">2024</span>
+    <span class="foot">Rescue Dog Society</span>
 </footer>
