--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,13 +1,14 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-h1 {
-    color: #A2D5E1;
-}
-
 
 ul {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+}
+
+h1 {
+    margin: 20px;
+    text-align: left;
 }
 
 li {
@@ -16,11 +17,82 @@ li {
 
 
 img {
-    /* max-width: 55%; */
     clip-path: circle(45%);
     display: flex;
-    float: left;
     width:  300px;
     height: 300px;
     object-fit: cover;
+    margin-left: 50px;
 }
+
+h2 {
+    float: right;
+}
+
+pre {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 800px;
+    margin-right: 100px;
+    font-size: 20px;
+}  
+
+.username {
+    margin-right: 30px;
+}
+
+.navbar {
+    width: 100%;
+    background-color: #0d0c0c;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar a {
+    float: left;
+    padding: 12px;
+    color: white;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+  .navbar a:hover {
+    background-color: #000000;
+  }
+
+.title {
+    text-align: center;
+}
+
+.form-control {
+    display: flex;
+    flex-direction: column;
+    margin: 150px;
+}
+
+.box {
+    float: right;
+    margin: 30px;
+}
+
+.navbar-start {
+    margin-left: 50px;
+}
+
+
+#button {
+    margin: 30px;
+    max-width: min-content;
+    align-self: center;  
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
