--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,18 @@
-<header class="navbar is-black">
-  <div class="navbar-start">
-    <h1 class="title">Rescue Dog Society</h1>
+<header >
+  <nav class="navbar" >
+    <h1 class="title" >Rescue Dog Society</h1>
        <% if (currentUser) { %>
-      <a class="navbar-item" href="/rescue">All Dogs</a>
-      <a class="navbar-item" href="/rescue/new">Add Dog</a>
-      <li class="navbar-item">Welcome <%= currentUser.username %></li>
-      <li class="nav-link">
+      <a  href="/rescue">All Dogs</a>
+      <a href="/rescue/new">Add Dog</a>
+      <div>
+        <div class="username" >Welcome <%= currentUser.username %></div>
         <form action="/sessions?_method=DELETE" method="POST">
-          <input type="submit" value="Log Out" />
+            <input class="button is-rounded is-small" id="log-out" type="submit" value="Log Out" />
         </form>
-      </li>
+      </div>
       <% } else { %>
       <li><a class="nav-link" href="/users/new">Sign Up</a></li>
       <li><a class="nav-link" href="/sessions/new">Log In</a></li>
       <% } %>
-  </div>
+      </nav>
 </header>
