--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,21 +3,21 @@
     <%- include ("./partials/head.ejs") %>
 <body>
     <%- include ("./partials/header.ejs") %>
-    <form action="/rescue" method="POST" class="form">
+    <form action="/rescue" method="POST" class="form-control">
         <label class="label is-medium" for="name">name</label>
-        <input class="input" name="name" type="text" id="name">
+        <input class="input is-rounded" name="name" type="text" id="name">
         <label class="label is-medium" for="sex">sex</label>
-        <input class="input" name="sex" type="text" id="sex">
+        <input class="input is-rounded" name="sex" type="text" id="sex">
         <label class="label is-medium" for="size">size</label>
-        <input class="input" name="size" type="text" id="size">
+        <input class="input is-rounded" name="size" type="text" id="size">
         <label class="label is-medium" for="color">color</label>
-        <input class="input" name="color" type="text" id="color">
+        <input class="input is-rounded" name="color" type="text" id="color">
         <label class="label is-medium" for="breed">breed</label>
-        <input class="input" name="breed" type="text" id="breed">
+        <input class="input is-rounded" name="breed" type="text" id="breed">
         <label class="label is-medium" for="lifeStage">life stage</label>
-        <input class="input" name="lifeStage" type="text" id="lifeStage">
+        <input class="input is-rounded" name="lifeStage" type="text" id="lifeStage">
         <label class="label is-medium" for="img">img</label>
-        <input class="input" name="img" id="img">
+        <input class="input is-rounded" name="img" id="img">
         <input class="button is-black" type="submit" id="button">
     </form>
     <%- include ("./partials/footer.ejs") %>
