--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,11 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 ul {
     list-style: none;
@@ -27,14 +34,79 @@ img {
 
 h2 {
     float: right;
+} 
+
+footer {
+    text-align: center;
+}
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* The actual popup */
+  .popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+  }
+  
+  /* Popup arrow */
+  .popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+  
+  /* Toggle this class - hide and show the popup */
+  .popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
 }
 
-pre {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-left: 800px;
-    margin-right: 100px;
-    font-size: 20px;
-}  
+.dog-name {
+    font-size: 40px;
+}
+.box {
+    max-width: 80%;
+    height: 500px;
+    margin-left: 100%;
+    align-content: center;
+}
+
+
+.dog-pic{
+    clip-path: none;
+    
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    margin-left: 60%;
+    position: relative;
+    bottom: 260px;
+}
 
 .username {
     margin-right: 30px;
@@ -54,9 +126,9 @@ pre {
     font-size: 17px;
 }
 
-  .navbar a:hover {
+.navbar a:hover {
     background-color: #000000;
-  }
+}
 
 .title {
     text-align: center;
@@ -77,6 +149,10 @@ pre {
     margin-left: 50px;
 }
 
+#adopt-button{
+    top: -200px;
+    margin-left: 140px;
+}
 
 #button {
     margin: 30px;
@@ -84,6 +160,17 @@ pre {
     align-self: center;  
 
 }
+
+  /* Add animation (fade in the popup) */
+  @-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+  }
+  
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
 
 
 
