--- a/public/css/app.css
+++ b/public/css/app.css
@@ -172,7 +172,24 @@ footer {
     to {opacity:1 ;}
   }
 
+  @media screen and (max-width: 1000px) {
 
+    .navbar {
+        flex-direction: row;
+        padding: 20px;
+    }
+
+    .navbar li a{
+        margin: 5px 0px;
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .box  {
+        width: 30px;
+    }
+}
 
 
 
