--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,7 +3,7 @@
     <%- include ("./partials/head.ejs") %>
 <body>
     <%- include ("./partials/header.ejs") %>
-    <h1>Edit Your Furry Friend Here</h1>
+    <h1 id="edit">Edit Your Furry Friend Here</h1>
     <form action="/myrescue/<%= animal.id%>?_method=PUT" method="POST" class="form-control">
         <label class="label is-medium" for="name">name</label>
         <input class="input is-rounded" value="<%= animal.name %>" name="name" type="text">
