added images to read me

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,8 +18,8 @@
         <input class="input is-rounded" name="lifeStage" type="text" id="lifeStage">
         <label class="label is-medium" for="img">img</label>
         <input class="input is-rounded" name="img" id="img">
+        <label class="label is-medium" for="isAdopted" id="adopted">Is adopted</label>
         <input type="checkbox" name="isAdopted">
-        <label class="label is-medium" for="isAdopted">Is adopted</label>
         <input class="button is-black" type="submit" id="button">
     </form>
     <%- include ("./partials/footer.ejs") %>
