--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -19,8 +19,8 @@
         <input class="input is-rounded" value="<%= animal.lifeStage %>" name="lifeStage" type="text">
         <label class="label is-medium" for="img">img</label>
         <input class="input is-rounded" value="<%= animal.img %>" name="img">
-        <input type="checkbox" name="isAdopted">
-        <label class="label is-medium" for="isAdopted">Is adopted</label>
+        <label class="label is-medium" for="isAdopted" id="adopted">Is adopted</label>
+        <input class="check" type="checkbox" name="isAdopted" >
         <input class="button is-black is-normal" type="submit" value="Edit" id="button">
     </form>
     <%- include ("./partials/footer.ejs") %>
